# ai-nrl-betting

./: .gitignore  README.md  alertmanager.yml  docker-compose.yml  monitoring-stack.yml  prometheus.yml  pyproject.toml  real_models_api.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Footer.css  Subscription.tsx  custom.d.ts  global.d.ts  index.css  index.tsx
frontend/src/components/: MainPredictionView.tsx  NRLChat.css  NRLChat.tsx  PredictionForm.tsx  PredictionOutput.tsx  PurchasePanel.tsx  UserPredictions.tsx
frontend/src/components/Auth/: LoginButton.tsx  LogoutButton.tsx
frontend/src/components/Layout/: Footer.tsx  Header.tsx  MainContent.tsx  RightPanel.tsx  Sidebar.tsx
frontend/src/config/: firebaseConfig.ts  models.ts
frontend/src/contexts/: AuthContext.tsx  EntitlementsContext.tsx
frontend/src/services/: predictionAPI.ts
frontend/src/types/: index.ts
infrastructure/docker/: docker-compose.production.yml
infrastructure/k8s/: namespace.yaml  prediction-engine-deployment.yaml
infrastructure/kafka/: docker-compose.kafka.yml
infrastructure/terraform/: main.tf  variables.tf
scripts/: install_dependencies.sh  run_unified_api.py  start_monitoring.sh
services/api-gateway/: docker-compose.yml  init-kong.sh  kong.yml
services/chat-assistant/: Dockerfile  pyproject.toml
services/chat-assistant/src/application/: use_cases.py
services/chat-assistant/src/domain/: models.py
services/chat-assistant/src/infrastructure/: chat_model.py  event_setup.py  knowledge_base.py  repositories.py  topic_classifier.py
services/chat-assistant/src/interfaces/: api.py
services/prediction-engine/: Dockerfile  pyproject.toml  validate_migration.py
services/prediction-engine/src/application/: moe_router.py  prediction_service.py  use_cases.py
services/prediction-engine/src/domain/: models.py  prediction_models.py
services/prediction-engine/src/infrastructure/: feature_engineering.py  repositories.py
services/prediction-engine/src/interfaces/: api.py  unified_api.py
services/prediction-engine/src/modules/logistic_regression/: model.py
services/subscription-billing/: import_coupons.py  pyproject.toml  requirements.txt  stripe_integration.py
services/subscription-billing/purchase_service/: api.py  payments.py  storage.py
services/user-management/: pyproject.toml  requirements.txt
services/user-management/src/application/: user_service.py
services/user-management/src/domain/: models.py
services/user-management/src/infrastructure/: api.py  models.py
services/user-management/user_service/: auth.py  config.py  permissions.py  storage.py
shared/auth/: firebase.py
shared/data_contracts/: prediction.py
shared/events/: event_bus.py
shared/monitoring/: telemetry.py
tools/scripts/: dev-setup.sh
