[tool.poetry]
name = "ai-betting-platform"
version = "0.1.0"
description = "Enterprise-grade AI betting platform for NRL predictions"
authors = ["Development Team"]
readme = "README.md"
packages = [
    {include = "shared"},
    {include = "services/**/src", from = "."}
]

[tool.poetry.dependencies]
python = "^3.11"
# Shared dependencies with locked versions
fastapi = "^0.104.1"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.23"
uvicorn = "^0.24.0"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"

[tool.poetry.group.prediction.dependencies]
scikit-learn = "^1.3.2"
lightgbm = "^4.1.0"
torch = "^2.1.0"
transformers = "^4.35.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
joblib = "^1.3.0"

[tool.poetry.group.database.dependencies]
psycopg2-binary = "^2.9.7"
redis = "^5.0.0"
pymongo = "^4.6.0"

[tool.poetry.group.monitoring.dependencies]
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.group.security.dependencies]
cryptography = "^41.0.0"
python-jose = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["testing"]