[tool.poetry]
name = "chat-assistant"
version = "0.1.0"
description = "AI Betting Platform Chat Assistant Service"
authors = ["Development Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^2.5.0"
uvicorn = "^0.24.0"
transformers = "^4.35.0"
torch = "^2.1.0"
tokenizers = "^0.15.0"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"