[tool.poetry]
name = "prediction-engine"
version = "0.1.0"
description = "AI Betting Platform Prediction Engine"
authors = ["Development Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^2.5.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.7"
redis = "^5.0.0"
scikit-learn = "^1.3.2"
lightgbm = "^4.1.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
joblib = "^1.3.0"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"