[tool.poetry]
name = "subscription-billing"
version = "1.0.0"
description = "Subscription and Billing Service with Stripe Integration"
authors = ["AI Betting Platform Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
stripe = "^7.8.0"
sqlalchemy = "^2.0.23"
sqlite3 = "*"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"